solution for #3266
