# server/config/swagger/kibopush.json
@@ -8130,6 +8130,50 @@
           }
         }
       }
+    },
+    "/automationQueue": {
+      "get": {
+        "description": "gives all the automated options in the automated queue",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "description": "success"
+                },
+                "payload": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "$ref": "#/definitions/AutomationQueue"
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "failed",
+            "schema": {
+              "$ref": "#/definitions/Response404"
+            }
+          },
+          "500": {
+            "description": "failed",
+            "schema": {
+              "$ref": "#/definitions/Response500"
+            }
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -10029,6 +10073,28 @@
         "datetime": {
           "type": "string",
           "description": "date and time of when this subscriber subscribed"
+        }
+      }
+    },
+    "AutomationQueue": {
+      "type": "object",
+      "description": "This table is used to store automation queue",
+      "properties": {
+        "automatedMessageId": {
+          "type": "string",
+          "description": "Id of the automated message i.e. survey, poll etc."
+        },
+        "subscriberId": {
+          "type": "string",
+          "description": "Id of the subscriber to which automated message should be sent"
+        },
+        "companyId": {
+          "type": "string",
+          "description": "Id of the company that the user belongs to"
+        },
+        "type": {
+          "type": "string",
+          "description": "whether the automated message is survey, poll, broadcast"
         }
       }
     },
